2008-03-14  Alexander Larsson  <alexl@redhat.com>

        * daemon/gvfsbackendsmb.c:
        (set_info_from_stat):
	Mark files with an initial dot to be hidden.
	This handles unix smb shares, and should not affect
	windows shares much, since they generally don't use dot
	for extensions so its not used otherwise in filenames.

2008-03-14  Christian Kellner  <gicmo@gnome.org>

	* client/httpuri.c:
	Make sure we set the port to -1 in case when no port
	is specified on the url so the port will be omiited
	when we convert the url to a string

2008-03-13  Alexander Larsson  <alexl@redhat.com>

	* daemon/archive.mount.in:
	Actually add the mount file for archive

2008-03-12  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	fix enumerating to do the right thing

2008-03-12  Alexander Larsson  <alexl@redhat.com>

        * configure.ac:
        * daemon/Makefile.am:
        * daemon/gvfsbackendarchive.[ch]:
	Added archive backend from Benjamin Otte
	Requires libarchive

2008-03-12  Benjamin Otte  <otte@gnome.org>

	* daemon/gvfsbackendftp.c:
	invalidate the cache of directories that we modified ourselves.
	* daemon/Makefile.am:
	allow 10 threads in parallel

2008-03-12  Hans Petter Jansson  <hpj@novell.com>

	* client/gdaemonfile.c (do_async_path_call): We were testing the
	wrong cancellable pointer for non-NULL-ness, which broke cancellation
	for all async operations. Fix that.

2008-03-11  Alexander Larsson  <alexl@redhat.com>

        * common/gsysutils.c:
        * configure.ac:
	OpenBSB portability fixes.
	Patch from Jasper Lievisse Adriaanse <jasper@humppa.nl>

2008-03-11  Alexander Larsson  <alexl@redhat.com>

	* daemon/gvfsbackendsftp.c (spawn_ssh):
	Use GError->message, not GError->msg.
	Patch from Jasper Lievisse Adriaanse <jasper@humppa.nl>

2008-03-10  Alexander Larsson  <alexl@redhat.com>

	* configure.ac:
	Post release version bump

=== gvfs 0.2.0.1 ===

2008-03-10  Alexander Larsson  <alexl@redhat.com>

	* configure.ac: